tweak for older java